// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeTextForm tests  rendering active form 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <TextField
      disabled={false}
      error={true}
      fullWidth={true}
      helperText="This field is required   "
      inputRef={[Function]}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value=""
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={2}
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`FreeTextForm tests  rendering disabled form 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <TextField
      disabled={true}
      error={true}
      fullWidth={true}
      helperText="This field is required   "
      inputRef={[Function]}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value=""
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={2}
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`FreeTextForm tests  rendering reminder to add input 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <TextField
      disabled={false}
      error={true}
      fullWidth={true}
      helperText="This field is required   false"
      inputRef={[Function]}
      onChange={[Function]}
      onKeyPress={[Function]}
      required={false}
      select={false}
      value="one"
      variant="standard"
    />
    <WithStyles(Typography)
      className=""
      variant="caption"
    >
      reminder text
    </WithStyles(Typography)>
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={2}
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`FreeTextForm tests  should display error about input length 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <TextField
      disabled={false}
      error={true}
      fullWidth={true}
      helperText="This field is required  -  Limited to 3 characters "
      inputRef={[Function]}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value="test"
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={2}
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={true}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;

exports[`FreeTextForm tests  should focus on textField 1`] = `
<WithStyles(Grid)
  alignItems="center"
  container={true}
  display="row"
  spacing={16}
>
  <WithStyles(Grid)
    item={true}
    style={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <TextField
      disabled={false}
      error={true}
      fullWidth={true}
      helperText="This field is required   "
      inputRef={[Function]}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value="one"
      variant="standard"
    />
  </WithStyles(Grid)>
  <WithStyles(Grid)
    item={true}
    sm={2}
    xs={12}
  >
    <WithStyles(Button)
      color="primary"
      disabled={false}
      fullWidth={true}
      onClick={[Function]}
      variant="contained"
    >
      Add
    </WithStyles(Button)>
  </WithStyles(Grid)>
</WithStyles(Grid)>
`;
